--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@ body {
     opacity: 100% !important;
     position: absolute;
     background-color: #111111 !important;
-    border-radius: 0;
+    border-radius: 0 !important;
 &::before,
 &::after {
      content: "";
