--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,3 +21,28 @@ body {
  //background-color: #ffffff;
  }
 }
+
+.outline-effect-transparent {
+  opacity: 100% !important;
+  position: relative;
+  //background-color: #ffffff !important;
+  border-radius: 0 !important;
+  transform-style: preserve-3d;
+  &::before,
+  &::after {
+    transform: translateZ(-1px);
+    content: "";
+    position: absolute;
+    top: 9px;
+    left: 9px;
+    width: 100%;
+    height: 100%;
+    border: 1.5px solid #111111;
+  }
+}
+
+.product-horizontal-list {
+  display: flex;
+  max-width: 74rem;
+  gap: 1.5rem;
+}
