--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,6 +22,26 @@ body {
  }
 }
 
+.outline-effect-btn-accent {
+  opacity: 100% !important;
+  position: absolute;
+  background-color: #A38D58 !important;
+  border-radius: 0 !important;
+  transform-style: preserve-3d;
+  &::before,
+  &::after {
+    transform: translateZ(-1px);
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 100%;
+    height: 100%;
+    border: 1.5px solid #ffffff;
+    //background-color: #ffffff;
+  }
+}
+
 .outline-effect-transparent {
   opacity: 100% !important;
   position: relative;
