--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,6 +42,26 @@ body {
   }
 }
 
+.outline-effect-btn-white {
+  opacity: 100% !important;
+  position: absolute !important;
+  background-color: #ffffff !important;
+  border-radius: 0 !important;
+  transform-style: preserve-3d;
+  &::before,
+  &::after {
+    transform: translateZ(-1px);
+    overflow: auto;
+    content: "" !important;
+    position: absolute !important;
+    top: 6px !important;
+    left: 6px !important;
+    width: 100% !important;
+    height: 100% !important;
+    border: 1.5px solid #ffffff !important;
+  }
+}
+
 .outline-effect-transparent {
   opacity: 100% !important;
   position: relative;
